--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
         &copy; Copyright 2022. No Rights Reserved
       </div>
       <div>
-        Created by @<a href = "http://surl.li/csvde">Kingsman27</a>
+        Created by @<a href = "https://home.iitk.ac.in/~umam20/">Kingsman27</a>
       </div>
     </div>
   </footer><!-- End Footer -->
